Fix path for environment files in set-env.js

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,5 @@ Thumbs.db
 src/app/environments/environment.ts
 src/app/environments/environment.prod.ts
 .env
+src/environments/environment.prod.ts
+src/environments/environment.ts
