--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@vercel/analytics": "^1.5.0",
     "dotenv": "^16.4.7",
     "firebase": "^11.6.0",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.12.1",
+    "jspdf": "^3.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
